infra/k8s/ingresses/ingress-svc.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: ticketing.local
      http:
        paths:
          - backend:
              service:
                name: payments-svc
                port:
                  number: 3000
            pathType: Prefix
            path: /api/payments/?(.*)
          - backend:
              service:
                name: orders-svc
                port:
                  number: 3000
            pathType: Prefix
            path: /api/orders/?(.*)
          - backend:
              service:
                name: tickets-svc
                port:
                  number: 3000
            pathType: Prefix
            path: /api/tickets/?(.*)
          - backend:
              service:
                name: auth-svc
                port:
                  number: 3000
            pathType: Prefix
            path: /api/users/?(.*)
          - backend:
              service:
                name: client-svc
                port:
                  number: 3000
            pathType: Prefix
            path: /?(.*)
